--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,50 @@
-name: Muneeza Azmat
-markdown: kramdown
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-permalink: /blog/:year/:month/:day/:title
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+---------------------------------------------------------
+title: Muneeza Azmat 
+email: azmatmun@msu.edu
+-----------------------------------------------------------
+
+description: >- # this means to ignore newlines until "baseurl:"
+  Made with jekyll and GitHub pages.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://nathawkins.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  muneezaazmat
+twitter_username: MuneezaAzmat
+
+# Build settings
+markdown: kramdown
+theme: minima
+sass:
+  sass_dir: _sass
+include: ['_pages','_docs', '_drafts', '_resources', '_includes','_cv', "blog", "css"]
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+exclude:
+   - _cv/CV.Rmd
+   - _cv/resume.Rmd
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
