--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,5 @@
 
----------------------------------------------------------
-name: Muneeza Azmat 
+title: Muneeza Azmat 
 email: azmatmun@msu.edu
 markdown: kramdown
------------------------------------------------------------
-
-
 permalink: /blog/:year/:month/:day/:title
